--- a/client/src/Styles/SubmitForm.css
+++ b/client/src/Styles/SubmitForm.css
@@ -15,7 +15,7 @@
   margin-top: 1%;
   padding: 3%;
   font-size: large;
-  background-color: rgb(182, 6, 6);
+  background-color: rgb(218,165,32);
   color: white;
   border-radius: 40px;
   border: 2px solid black;
