--- a/client/src/Styles/Welcome.css
+++ b/client/src/Styles/Welcome.css
@@ -1,7 +1,8 @@
 .get-started-button {
   padding: 6%;
   font-size: xx-large;
-  background-color: rgb(182, 6, 6);
+  /* background-color: rgb(182, 6, 6); */
+  background-color: rgb(218,165,32);
   color: white;
   border-radius: 40px;
   border: 2px solid black;
