--- a/client/src/Styles/Movie.css
+++ b/client/src/Styles/Movie.css
@@ -8,11 +8,13 @@
 }
 
 .movie-main-div__single-div {
+  width: 100%;
   font-size: x-large;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .movie-main-div__single-div__button {
