--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,7 @@
 .main-div {
   background-image: url('./Styles/images/background.jpg');
   background-size: cover;
+  overflow: auto;
   margin: auto;
   max-width: 800px;
   height: 100vh;
