--- a/client/src/Styles/Session.css
+++ b/client/src/Styles/Session.css
@@ -1,9 +1,11 @@
 .main-div__movie-div {
+  margin-top: 5%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background:rgba(253, 249, 243, 0.5)
+  background:rgba(253, 249, 243, 0.5);
+  text-align: center;
 }
 
 .main-div__movie-div img {
