--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,4 +10,5 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+  text-shadow: 2px 2px black;
 }
